Component Client. Link&Carousel

--- a/escooter/app/globals.css
+++ b/escooter/app/globals.css
@@ -7,3 +7,6 @@
 .colorFilter404{
   filter: invert(9%) sepia(80%) saturate(6074%) hue-rotate(268deg) brightness(115%) contrast(133%);
 }
+.nav-link.active{
+  font-weight: bold;
+}
