--- a/escooter/app/globals.css
+++ b/escooter/app/globals.css
@@ -13,3 +13,19 @@
 .nav-link.active{
   font-weight: bold;
 }
+
+[data-theme='dark'] body{
+  background-color: rgb(108, 117, 125);
+}
+
+nav{
+  background-color: rgb(233, 236, 239);
+}
+[data-theme='dark'] nav{
+  color: #ffffff;
+  background-color: rgb(52, 58, 64);
+}
+[data-theme='dark'] a, [data-theme='dark'] a.nav-link.active{
+  color: #ffffff;
+  background-color: rgb(52, 58, 64);
+}
